objects/Subscription_Request_Log__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud Deployment</label>
        <referenceTo>Cloud_Deployment__c</referenceTo>
        <relationshipLabel>Subscription Request Log</relationshipLabel>
        <relationshipName>Subscription_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription Request Log</relationshipLabel>
        <relationshipName>Subscription_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generation_Date__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Text__c</fullName>
        <label>License Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Types</label>
        <referenceTo>LMS_License_Types__c</referenceTo>
        <relationshipLabel>Subscription Request Log</relationshipLabel>
        <relationshipName>Subscription_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <label>Machine Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Connector__c</fullName>
        <label>Mail Connector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft Exchange Server</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>GroupWise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FBMC</fullName>
                </value>
                <value>
                    <fullName>Gmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>LMS_ProductLine__c</referenceTo>
        <relationshipLabel>Subscription Request Log</relationshipLabel>
        <relationshipName>Subscription_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscription_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription Request Log (Sold To)</relationshipLabel>
        <relationshipName>Subscription_Request_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aculab</fullName>
                </value>
                <value>
                    <fullName>Dialogic</fullName>
                </value>
                <value>
                    <fullName>HMP</fullName>
                </value>
                <value>
                    <fullName>Combination with Audiocodes</fullName>
                </value>
                <value>
                    <fullName>TAPI</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Media Server Based (4.0+ only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription Request Log</label>
    <nameField>
        <label>Subscription Request Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Request Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>